--- a/ow_plugins/skmobileapp/application/src/pages/user/complete-account-type/index.html
+++ b/ow_plugins/skmobileapp/application/src/pages/user/complete-account-type/index.html
@@ -4,7 +4,7 @@
             {{ 'complete_account_type_page_header' | translate }}
         </ion-title>
         <ion-buttons end>
-            <button ion-button clear *ngIf="!isPageLoading" [disabled]="questionControl.isFormPending(form) || isUpdatingUserProfile" (click)="submit()">
+            <button ion-button clear *ngIf="!isPageLoading" class="sk-complete-account-type-button" [disabled]="questionControl.isFormPending(form) || isUpdatingUserProfile" (click)="submit()">
                 <ion-spinner *ngIf="isUpdatingUserProfile" name="ios-small"></ion-spinner>
                 <span *ngIf="!isUpdatingUserProfile">
                     {{ 'done' | translate }}
@@ -42,7 +42,7 @@
 
 <ion-footer class="sk-back-footer sk-blank-state-footer">
     <ion-toolbar>
-        <button type="button" ion-button block clear icon-start [disabled]="isUpdatingUserProfile" (click)="logout()">
+        <button type="button" class="sk-leave-complete-account-button" ion-button block clear icon-start [disabled]="isUpdatingUserProfile" (click)="logout()">
             <ion-icon name="ios-arrow-back"></ion-icon>
             <span class="sk-text-overflow">{{ 'back_to_starter_page_button' | translate }}</span>
         </button>
