--- a/ow_plugins/skmobileapp/application/src/pages/user/disapproved/index.html
+++ b/ow_plugins/skmobileapp/application/src/pages/user/disapproved/index.html
@@ -18,7 +18,7 @@
 
 <ion-footer class="sk-back-footer sk-blank-state-footer">
     <ion-toolbar>
-        <button type="button" ion-button block clear icon-start (click)="logout()">
+        <button type="button" class="sk-leave-user-disapproved-button" ion-button block clear icon-start (click)="logout()">
             <ion-icon name="ios-arrow-back"></ion-icon>
             <span class="sk-text-overflow">{{ 'back_to_starter_page_button' | translate }}</span>
         </button>
